--- a/master/website/templates/base.html
+++ b/master/website/templates/base.html
@@ -45,6 +45,10 @@
 
     {% endblock %}
 
+    {% block scripts %}
+
+    {% endblock %}
+
 </head>
 
 <!-- javascripts -->
@@ -63,7 +67,7 @@
   <script src="{%static 'assets/jquery-easy-pie-chart/jquery.easy-pie-chart.js'%}"></script>
   <script src="{%static 'js/owl.carousel.js'%}"></script>
   <!-- jQuery full calendar -->
-  <<script src="{%static 'js/fullcalendar.min.js'%}"></script>
+  <script src="{%static 'js/fullcalendar.min.js'%}"></script>
     <!-- Full Google Calendar - Calendar -->
     <script src="{%static 'assets/fullcalendar/fullcalendar/fullcalendar.js'%}"></script>
     <!--script for this page only-->
