--- a/master/website/templates/login.html
+++ b/master/website/templates/login.html
@@ -40,7 +40,7 @@
 
   <div class="container">
 
-    <form class="login-form" action="/">
+    <form class="login-form" action="board">
       <div class="login-wrap">
         <p class="login-img"><i class="icon_lock_alt"></i></p>
         <div class="input-group">
@@ -55,7 +55,7 @@
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
             </label>
-        <button class="btn btn-primary btn-lg btn-block" type="submit"><a href="http://127.0.0.1:8000/board/">Login</a> </button>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Login </button>
         <button class="btn btn-info btn-lg btn-block" type="button"onclick="location.href='member_register'">Signup</button>
       </div>
     </form>
