--- a/master/website/templates/member_register.html
+++ b/master/website/templates/member_register.html
@@ -44,7 +44,7 @@
           </header>
           <div class="panel-body">
             <div class="form">
-              <form class="form-validate form-horizontal " id="register_form" method="get" action="login">
+              <form class="form-validate form-horizontal " id="register_form" method="get" action="/">
                 <div class="form-group ">
                   <label for="fullname" class="control-label col-lg-2">Full name <span class="required">*</span></label>
                   <div class="col-lg-10">
@@ -90,7 +90,7 @@
                 <div class="form-group">
                   <div class="col-lg-offset-2 col-lg-10">
                     <button class="btn btn-primary" type="submit">Save</button>
-                    <button class="btn btn-default" type="button" onclick="location.href='/login'">Cancel</button>
+                    <button class="btn btn-default" type="button" onclick="location.href='/'">Cancel</button>
                   </div>
                 </div>
               </form>
