--- a/master/website/templates/navbar.html
+++ b/master/website/templates/navbar.html
@@ -6,7 +6,7 @@
       </div>
 
       <!--logo start-->
-      <a href="/" class="logo">Know <span class="lite">How</span></a>
+      <a href="/board" class="logo">Know <span class="lite">How</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
