--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -20,6 +20,7 @@
                 <li><a class="" href="{% url 'board:b_item_list' %}">품목</a></li>
                 <li><a class="" href="{% url 'board:b_bizpartner_list' %}">거래처(미정)</a></li>
                 <li><a class="" href="{% url 'board:bom_hdr_list' %}">BOM(미정)</a></li>
+                <li><a class="" href="{% url 'board:codemanage' %}">통합코드관리</a></li>
             </ul>
           </li>
              <li class="sub-menu">
