--- a/master/website/templates/member_register.html
+++ b/master/website/templates/member_register.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -36,6 +36,7 @@
     <![endif]-->
 </head>
 <body class="login-img-body">
+<input type="hidden" id="idcheck" value="0"/>
     <div class="row" style="width: 60%;">
       <div class="col-lg-12">
         <section class="panel">
@@ -46,51 +47,55 @@
             <div class="form">
               <form class="form-validate form-horizontal " id="register_form" method="get" action="/">
                 <div class="form-group ">
-                  <label for="fullname" class="control-label col-lg-2">Full name <span class="required">*</span></label>
+                  <label for="name" class="control-label col-lg-2">이름 </label>
                   <div class="col-lg-10">
-                    <input class=" form-control" id="fullname" name="fullname" type="text" />
+                    <input class=" form-control" id="name" name="name" type="text" />
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="address" class="control-label col-lg-2">Address <span class="required">*</span></label>
+                  <label for="phoneno" class="control-label col-lg-2">전화번호 </label>
                   <div class="col-lg-10">
-                    <input class=" form-control" id="address" name="address" type="text" />
+                    <input class=" form-control" id="phoneno" name="phoneno" type="text" />
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="username" class="control-label col-lg-2">Username <span class="required">*</span></label>
+                  <label for="user_id" class="control-label col-lg-2">ID <span class="required">*</span></label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="username" name="username" type="text" />
+                    <input class="form-control " id="user_id" name="user_id" type="text" required/>
+                  </div>
+                  <br><br>
+                  <div class="col-lg-offset-2 col-lg-10">
+                    <button class="btn btn-primary" onclick="checkId()">중복검사</button>
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="password" class="control-label col-lg-2">Password <span class="required">*</span></label>
+                  <label for="password" class="control-label col-lg-2">비밀번호 <span class="required">*</span></label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="password" name="password" type="password" />
+                    <input class="form-control " id="password" name="password" type="password" required/>
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="confirm_password" class="control-label col-lg-2">Confirm Password <span class="required">*</span></label>
+                  <label for="confirm_password" class="control-label col-lg-2">비밀번호 확인 <span class="required">*</span></label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="confirm_password" name="confirm_password" type="password" />
+                    <input class="form-control " id="confirm_password" name="confirm_password" type="password" required/>
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="email" class="control-label col-lg-2">Email <span class="required">*</span></label>
+                  <label for="email" class="control-label col-lg-2">Email </label>
                   <div class="col-lg-10">
                     <input class="form-control " id="email" name="email" type="email" />
                   </div>
                 </div>
                 <div class="form-group ">
-                  <label for="agree" class="control-label col-lg-2 col-sm-3">Agree to Our Policy <span class="required">*</span></label>
+                  <label for="clause" class="control-label col-lg-2 col-sm-3">약관 동의 <span class="required">*</span></label>
                   <div class="col-lg-10 col-sm-9">
-                    <input type="checkbox" style="width: 20px" class="checkbox form-control" id="agree" name="agree" />
+                    <input type="checkbox" style="width: 20px" class="checkbox form-control" id="clause" name="clause" />
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="col-lg-offset-2 col-lg-10">
-                    <button class="btn btn-primary" type="submit">Save</button>
-                    <button class="btn btn-default" type="button" onclick="location.href='/'">Cancel</button>
+                    <button class="btn btn-primary" type="button" onclick="registerMember()">가입</button>
+                    <button class="btn btn-default" type="button" onclick="location.href='/'">취소</button>
                   </div>
                 </div>
               </form>
@@ -99,5 +104,111 @@
         </section>
       </div>
     </div>
+    <script src="{% static 'js/sha1.js' %}"></script>
+ <script>
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        var csrftoken = getCookie('csrftoken');
+
+        var xhr;
+
+        function registerMember() {
+
+        user_id = document.getElementById("user_id").value;
+        if(user_id == "") {
+        alert("아이디를 입력해주세요.");
+        document.getElementById("user_id").focus();
+        return false;
+        }
+
+        password = document.getElementById("password").value;
+        if(password == "") {
+        document.getElementById("password").focus();
+        return false;
+        }
+
+        confirm_password = document.getElementById("confirm_password").value;
+        if(confirm_password == "") {
+        document.getElementById("confirm_password").focus();
+        return false;
+        }
+
+        if(password != confirm_password) {
+        alert("비밀번호가 일치하지 않습니다.");
+        document.getElementById("confirm_password").focus();
+        return false;
+        }
+
+        encpwd = hex_sha1(password);
+
+        name = document.getElementById("name").value;
+        email = document.getElementById("email").value;
+
+        wflag = document.getElementById("clause").checked;
+        if(wflag == false) {
+        alert("약관에 동의하여주십시오.");
+        return false;
+        }
+
+        var strurl = "member_insert?user_id=" + user_id + "&psswd=" + encpwd + "&user_nm=" + name + "&email=" + email;
+        alert(strurl);
+
+        xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function() {
+        if(xhr.readyState == 4) {
+        var data = xhr.responseText;
+
+        document.getElementById("databox_" + bno).style.display = "none";
+
+        var obj = JSON.parse(data);
+        alert(obj.result_msg);
+        }
+        };
+        xhr.open("POST", strurl);
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        xhr.send(null);
+        }
+
+        function checkId() {
+
+        user_id = document.getElementById("user_id").value;
+        if(user_id == "") {
+        alert("아이디를 입력해주세요.");
+        document.getElementById("user_id").focus();
+        return false;
+        }
+
+        var strurl = "member_idcheck?user_id=" + user_id;
+        alert(strurl);
+
+        xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function() {
+        if(xhr.readyState == 4) {
+        var data = xhr.responseText;
+
+        document.getElementById("databox_" + bno).style.display = "none";
+
+        var obj = JSON.parse(data);
+        alert(obj.result_msg);
+        }
+        };
+        xhr.open("POST", strurl);
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        xhr.send(null);
+        }
+    </script>
 </body>
 </html>
