--- a/master/website/board/templates/board/b_bizarea.html
+++ b/master/website/board/templates/board/b_bizarea.html
@@ -29,10 +29,9 @@
 <!--        <div style="border-top:solid 2px #888;">-->
         <table>
             <tr>
-                <td width="" align="center"  bgcolor="#E8E8E8">ID</td>
-                <td width="" align="center"  bgcolor="#E8E8E8">사업장코드</td>
-                <td width="" align="center"  bgcolor="#E8E8E8">대표자</td>
-
+                <td width="" align="center" >ID</td>
+                <td width="" align="center">사업장코드</td>
+                <td width="" align="center">대표자</td>
 
                 </td>
             </tr>
