--- a/master/website/board/templates/board/b_bizpartner.html
+++ b/master/website/board/templates/board/b_bizpartner.html
@@ -18,21 +18,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h3 class="page-header"><i class="fa fa-table"></i> 거래처</h3>
-                    <ol class="breadcrumb">
-                        <li><i class="fa fa-home"></i><a href="/">Home</a></li>
-                        <li><i class="fa fa-table"></i>Table</li>
-                        <li><i class="fa fa-th-list"></i>Basic Table</li>
-                    </ol>
                 </div>
             </div>
-            <div style="height:30px;"></div>
 
-<div style="margin:20px 0;">
-    Adder
+<div>
     {% if not rsHeader %}
         <p class="text-center">내용이 없습니다! </p>
     {% else %}
-        <div style="margin:20px 0;">
+        <div>
         <div style="border-top:solid 2px #888;">
         <table>
             <tr>
@@ -94,7 +87,7 @@
     {% endif %}
 </div>
 
-            <div class="row" style="margin:2px 0;border-top:solid 2px #888;">
+            <div class="row" style="border-top:solid 2px #888;">
               <div class="col-lg-12" style="margin-top:20px">
                 <section class="panel">
                   <header class="panel-heading">
