Change file location
Change the location of membership registration function.

--- a/master/website/board/templates/registration/login.html
+++ b/master/website/board/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -56,7 +56,7 @@
                 <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
             </label>
         <button class="btn btn-primary btn-lg btn-block" type="submit">Login </button>
-        <button class="btn btn-info btn-lg btn-block" type="button"onclick="location.href='member_register'">Signup</button>
+        <button class="btn btn-info btn-lg btn-block" type="button"onclick="location.href='board/member_register'">Signup</button>
       </div>
     </form>
     <div class="text-right">
