--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
             <li class="active">
-            <a class="" href="/">
+            <a class="">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
